--- a/raid/index.html
+++ b/raid/index.html
@@ -14,28 +14,58 @@
   <meta property="og:image" content="https://systemnflow.com/assets/img/snf_logo.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- Favicons (root-absolute paths so they work from /raid/) -->
+  <!-- Favicons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png" />
   <link rel="manifest" href="/assets/img/site.webmanifest" />
 
-  <!-- Styles (root-absolute so /raid/ can find it) -->
+  <!-- Styles -->
   <link rel="stylesheet" href="/styles.css" />
 
   <style>
     /* Modal */
-    .modal{display:none;position:fixed;z-index:1000;left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,.7);justify-content:center;align-items:center}
-    .modal-content{background:var(--panel);padding:2rem;border-radius:10px;text-align:center;max-width:400px;color:var(--ink)}
-    .modal-content h2{margin-bottom:1rem}
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.7);
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-content {
+      background: var(--panel);
+      padding: 2rem;
+      border-radius: 10px;
+      text-align: center;
+      max-width: 400px;
+      color: var(--ink);
+    }
+    .modal-content h2 { margin-bottom: 1rem; }
+
     /* Locked Pro Buttons */
-    .pro-only{opacity:.6;cursor:not-allowed;position:relative}
-    .pro-only::after{content:"🔒 Pro";position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);font-size:.8rem;font-weight:700;color:var(--muted);pointer-events:none}
+    .pro-only {
+      opacity: 0.6;
+      cursor: not-allowed;
+      position: relative;
+    }
+    .pro-only::after {
+      content: "🔒 Pro";
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 0.8rem;
+      font-weight: bold;
+      color: var(--muted);
+      pointer-events: none;
+    }
   </style>
 </head>
 
 <body>
-  <!-- 🔹 Header -->
+  <!-- Header -->
   <header class="site-header">
     <div class="container">
       <a href="/" class="brand-wrap" aria-label="System & Flow homepage">
@@ -52,7 +82,7 @@
     </div>
   </header>
 
-  <!-- 🔹 Main -->
+  <!-- Main -->
   <main class="container" style="max-width: 900px; margin: 4rem auto; padding: 2rem;">
     <h1 style="text-align:center;">Ronnie’s RAID Extractor™</h1>
     <p style="text-align:center; color: var(--muted); margin-bottom: 2rem;">
@@ -66,7 +96,7 @@
       Ronnie’s Confidence Score: <span style="color:var(--accent); font-weight:600;">82%</span>
     </div>
 
-    <!-- Textarea -->
+    <!-- Transcript Input -->
     <textarea id="input" rows="12" placeholder="Paste transcript..."
       style="width:100%; padding:1rem; border-radius:10px; border:1px solid var(--border); background:var(--panel); color:var(--ink);"></textarea>
 
@@ -78,7 +108,7 @@
       <input type="file" id="fileInput" accept=".txt,.docx,.pdf" style="color:var(--ink);" />
     </div>
 
-    <!-- Buttons -->
+    <!-- Action Buttons -->
     <div style="margin-top:1.5rem; display:flex; gap:1rem; flex-wrap:wrap;">
       <button id="run" class="button primary">Extract RAID</button>
       <button id="download" class="button ghost">Download CSV</button>
@@ -89,7 +119,7 @@
 
     <div id="output" style="margin-top:2rem;"></div>
 
-    <!-- 🔒 Pro Feature Teaser -->
+    <!-- Pro Feature Teaser -->
     <div id="pro-banner" style="margin-top:2rem; text-align:center; padding:1rem; border:1px dashed var(--border); border-radius:8px; background:var(--panel); color:var(--muted);">
       <p>🔒 <strong>Pro Feature:</strong> Save RAID History</p>
       <p style="font-size:0.9rem; color:var(--muted);">
@@ -109,7 +139,7 @@
     </div>
   </div>
 
-  <!-- 🔹 Footer -->
+  <!-- Footer -->
   <footer class="footer-min">
     <div class="container footer-container">
       <div class="foot-left">
