--- a/index.html
+++ b/index.html
@@ -81,18 +81,21 @@
     </section>
 
     <!-- Tools Grid -->
-    <section class="tools">
-      <div class="container grid">
-        <!-- Tool Card 1 -->
-        <div class="card">
-          <h3>Transcript Analyzer</h3>
-          <span class="badge live">Live</span>
-          <p>Auto-extract <strong>Actions, Risks, Decisions</strong> from raw meetings in seconds.</p>
-          <div class="card-actions">
-            <a class="button primary" href="/transcript-analyzer.html">Open</a>
-            <a class="button ghost" href="/docs/transcript-analyzer.html">Docs</a>
-          </div>
-        </div>
+<section class="tools">
+  <div class="container grid">
+    <!-- Tool Card 1 -->
+    <div class="card">
+      <h3>Ronnie’s RAID Extractor™ (Free)</h3>
+      <span class="badge live">Live</span>
+      <p>Paste or upload transcripts and auto-extract 
+        <strong>⚠ Risks, ✅ Actions, 🛑 Issues, 📌 Decisions</strong> in seconds.</p>
+      <div class="card-actions">
+        <!-- Direct to free RAID tool -->
+        <a class="button primary" href="/raid/index.html">Open</a>
+        <!-- Direct to RAID Docs (adjust path if needed) -->
+        <a class="button ghost" href="/docs/raid.html">Docs</a>
+      </div>
+    </div>
 
         <!-- Tool Card 2 -->
         <div class="card">
