--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
     </section>
 
-  <!-- Tools Grid -->
+ <!-- 🔹 Tools Grid (System & Flow Apps) -->
 <section class="tools">
   <div class="container grid">
 
@@ -104,7 +104,7 @@
         <h3>Ronnie’s RAID Extractor™ (Pro)</h3>
         <span class="badge pro">Pro</span>
         <p>Unlock <strong>RAID history, Excel/PDF export, and saved logs</strong>. 
-           Includes early access to analytics and AI summaries.</p>
+          Includes early access to analytics and AI summaries.</p>
         <div class="card-actions">
           <span class="button primary">Launch Pro</span>
           <span class="button ghost">Upgrade</span>
@@ -118,7 +118,7 @@
         <h3>Status Report Generator</h3>
         <span class="badge soon">Q4 2025</span>
         <p>Create <strong>VP-ready summaries</strong> in PDF or Markdown with one click. 
-           Designed for executive reporting.</p>
+          Designed for executive reporting.</p>
         <div class="card-actions">
           <span class="button ghost">Notify Me</span>
         </div>
@@ -131,7 +131,7 @@
         <h3>Risk Radar</h3>
         <span class="badge soon">Coming Soon</span>
         <p>Auto-detect critical project risks — with <strong>AI-backed mitigation tips</strong> 
-           to keep delivery on track.</p>
+          to keep delivery on track.</p>
         <div class="card-actions">
           <span class="button ghost">Notify Me</span>
         </div>
